Fix TextField Cancel Icon Sizing (#156)
- incorrectly used padding instead of margin, which 
allowed the icon to become squished
- change spacing to margin-right

--- a/src/components/Textfield/styles.scss
+++ b/src/components/Textfield/styles.scss
@@ -148,7 +148,7 @@
         height: $tw-sz-base-small;
         fill: $tw-clr-icn-secondary;
         margin-left: $tw-spc-base-x-small;
-        padding-right: $tw-spc-base-xx-small;
+        margin-right: $tw-spc-base-xx-small;
         vertical-align: top;
       }
     }
